# incident-management-api

./: .env  .env.example  .gitignore  .pre-commit-config.yaml  PROJECT_STATUS.md  README.md  WorkFlow.txt  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt  rules
alembic/: env.py
alembic/versions/: e74733cfd0c8_create_tickets_table.py
app/: docker-compose.yml  main.py
app/api/: tickets.py
app/core/: config.py
app/db/: __init__.py  database.py
app/models/: ticket.py
app/schemas/: response.py  ticket.py
tests/: conftest.py  test_error_handling.py  test_health.py  test_tickets.py
